--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -5,13 +5,25 @@
 </h2>
 
 <i>
-  <th>Established in </th>
+  Established in 
   <%= @brewery.year %>
 </i>
 
 <p>
+  Number of beers 
+  <%= @brewery.beers.count %>
+<p>
+
+<p>
  <% @brewery.beers.each do |beer| %>
    <%= link_to beer.name, beer %>
+ <% end %>
+</p>
+
+<p>
+ Has <%= pluralize(@brewery.ratings.count, 'rating') %>
+ <% if @brewery.ratings.count > 0 %>
+ , average <%= @brewery.average_rating %>
  <% end %>
 </p>
 
