--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -2,17 +2,15 @@
 
 <h2>List of ratings</h2>
 
-<%= link_to 'New Rating', 'ratings/new' %>
-
 <p> Number of ratings: <%= Rating.count %> </p>
 
-
 <ul>
-  <% Rating.all.each do |rating| %>
-    <li> <%= rating %> <%= link_to 'delete', rating, method: :delete,
-    data: { confirm: 'Are you sure?' } %> </li>
+  <% @ratings.each do |rating| %>
+    <li> <%= rating %> <%= link_to rating.user.username, user_path(rating.user.id)%> </li>
   <% end %>
 </ul>
+
+<%= link_to 'New Rating', new_rating_path %>
 
 
 
