--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,27 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
   <div class="navibar">
     <%= link_to 'breweries', breweries_path %>
     <%= link_to 'beers', beers_path %>
     <%= link_to 'ratings', ratings_path %>
+    <%= link_to 'users', users_path %>
+    <%= link_to 'clubs', beer_clubs_path %>
+    |
+    <% if session[:user_id].nil? %>
+    <%= link_to 'signin', signin_path %>
+    <%= link_to 'signup', signup_path %>
+    <% else %>
+    <%= link_to current_user.username, user_path(current_user.id) %>
+    <%= link_to 'join a club', new_membership_path %>
+    <%= link_to 'rate a beer', new_rating_path %>
+    <%= link_to 'signout', signout_path %>
+    <% end %>
   </div> 
 
-<%= yield %>
+  <%= yield %>
 
 </body>
 </html>
