--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= link_to current_user.username, user_path(current_user.id) %>
     <%= link_to 'join a club', new_membership_path %>
     <%= link_to 'rate a beer', new_rating_path %>
-    <%= link_to 'signout', signout_path %>
+    <%= link_to 'signout', signout_path, method: :delete %>
     <% end %>
   </div> 
 
