--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -21,12 +21,13 @@
 </p>
 
 <% if @brewery.ratings.empty? %>
- beers of the brewery has not yet been rated!
+ Beers of the brewery has not yet been rated!
 <% else %>
  Has <%= pluralize(@brewery.ratings.count, 'rating') %>, average <%= @brewery.average_rating %>
 <% end %>
 
 <p>
-  <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
-  <%= link_to 'Back', breweries_path %>
+  <%= link_to 'Edit', edit_brewery_path(@brewery) if current_user %>
+<br>
+  <%= link_to 'Destroy', @brewery, method: :delete, data: { confirm: 'Are you sure?' } if current_user %>
 </p>
