--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -20,5 +20,8 @@
     <% end %>
 </ul>
 
-<%= link_to 'Edit', edit_beer_club_path(@beer_club) %>
-<%= link_to 'Back', beer_clubs_path %>
+<p>
+  <%= link_to('Edit', edit_beer_club_path(@beer_club)) if current_user %>
+<br>
+  <%= link_to('Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' }) if current_user %>
+</p>
