--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -24,5 +24,8 @@
   <% end %>
 </p>
 
-<%= link_to 'Edit', edit_beer_path(@beer) %> |
-<%= link_to 'Back', beers_path %>
+<p>
+  <%= link_to 'Edit', edit_beer_path(@beer) if current_user %>
+<br>
+  <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } if current_user %>
+</p>
