--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Style:</strong>
-  <%= @beer.style %>
+  <%= @beer.style.name %>
 </p>
 
 <p>
@@ -24,8 +24,17 @@
   <% end %>
 </p>
 
-<p>
-  <%= link_to 'Edit', edit_beer_path(@beer) if current_user %>
-<br>
-  <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } if current_user %>
-</p>
+<% if current_user %>
+
+    <h4>Give a rating:</h4>
+
+    <%= form_for(@rating) do |f| %>
+        <%= f.hidden_field :beer_id %>
+        score: <%= f.number_field :score %>
+        <%= f.submit %>
+    <% end %>
+
+    <%= link_to 'Edit', edit_beer_path(@beer) %>
+
+<% end %>
+
