--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,7 @@
  </p>
 
  <p>
- Favorite style: <%= @user.favorite_style %>
+ Favorite style: <%= @user.favorite_style.name %>
  </p>
 
  <p>
@@ -45,6 +45,7 @@
 </ul>
 
 <% if @user == current_user %>
-<%= link_to 'Change password', edit_user_path(@user) %> |
-<%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'Are you sure?' } %> |
+<%= link_to 'Change password', edit_user_path(@user) %>
+<br>
+<%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
