--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -8,20 +8,38 @@
   Founded in <%= @beer_club.founded %>
 </p>
 
-<p>
-  <strong> Members </strong>
-</p>
+<% if @beer_club.members.count > 0 %>
+    <p>
+      <strong> Members </strong>
+    </p>
 
-<ul>
-  <% @beer_club.members.each do |member| %>
-   <li>
-     <%= link_to member.username, member %>
-   </li>
+    <ul>
+      <% @beer_club.members.each do |member| %>
+       <li>
+         <%= link_to member.username, member %>
+       </li>
+        <% end %>
+    </ul>
+<% end %>
+
+<% if current_user %>
+    <% if (@beer_club.members.where id: current_user.id).count == 0 %>
+        <%= form_for(@membership) do |f| %>
+            <%= f.hidden_field :beer_club_id %>
+            <%= f.submit value:"join the club" %>
+        <% end %>
+    <% else %>
+        <% session[:bcid] = @beer_club.id %>
+        <% session[:bcname] = @beer_club.name %>
+        <%= form_for(@membership, method: "delete") do |f| %>
+            <%= f.hidden_field :beer_club_id %>
+            <%= f.submit value: "End the membership" %>
+        <% end %>
     <% end %>
-</ul>
-
-<p>
-  <%= link_to('Edit', edit_beer_club_path(@beer_club)) if current_user %>
 <br>
-  <%= link_to('Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' }) if current_user %>
+    <%= link_to 'Edit', edit_beer_club_path(@beer_club) %>
+    <%= link_to('Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' }) if current_user %>
+
+<% end %>
+
 </p>
