--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -17,12 +17,11 @@
   </div>
   <div class="field">
     <%= f.label :style %><br>
-    <%= f.select :style, options_for_select(@styles) %>
+    <%= f.select :style_id, options_from_collection_for_select(@styles, :id, :name) %>
   </div>
   <div class="field">
     <%= f.label :brewery %><br>
-    <%= f.select :brewery_id, 
-    options_from_collection_for_select(@breweries, :id, :name) %>
+    <%= f.select :brewery_id, options_from_collection_for_select(@breweries, :id, :name) %>
   </div>
   <div class="actions">
     <%= f.submit %>
