--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,11 @@
   <div class="navibar">
     <%= link_to 'breweries', breweries_path %>
     <%= link_to 'beers', beers_path %>
+    <%= link_to 'styles', styles_path %>
     <%= link_to 'ratings', ratings_path %>
     <%= link_to 'users', users_path %>
     <%= link_to 'clubs', beer_clubs_path %>
+    <%= link_to 'places', places_path %>
     |
     <% if session[:user_id].nil? %>
     <%= link_to 'signin', signin_path %>
