--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -26,19 +26,21 @@
     <% if (@beer_club.members.where id: current_user.id).count == 0 %>
         <%= form_for(@membership) do |f| %>
             <%= f.hidden_field :beer_club_id %>
-            <%= f.submit value:"join the club" %>
+            <%= f.submit value:"join the club", class:'btn btn-primary' %>
         <% end %>
     <% else %>
         <% session[:bcid] = @beer_club.id %>
         <% session[:bcname] = @beer_club.name %>
         <%= form_for(@membership, method: "delete") do |f| %>
             <%= f.hidden_field :beer_club_id %>
-            <%= f.submit value: "End the membership" %>
+            <%= f.submit value: "End the membership", class:'btn btn-danger' %>
         <% end %>
     <% end %>
 <br>
-    <%= link_to 'Edit', edit_beer_club_path(@beer_club) %>
-    <%= link_to('Destroy', @beer_club, method: :delete, data: { confirm: 'Are you sure?' }) if current_user %>
+    <p>
+    <%= link_to 'Edit', edit_beer_club_path(@beer_club), class:'btn btn-primary' %>
+    </p>
+    <%= link_to('Destroy', @beer_club, class:'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' }) if current_user.admin==true %>
 
 <% end %>
 
