--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -20,21 +20,27 @@
    beer has not been rated yet
   <% else %>
    Has <%= pluralize(@beer.ratings.count, 'rating') %>, 
-   average <%= @beer.average_rating %>
+   average <%= round(@beer.average_rating) %>
   <% end %>
 </p>
 
+<p>
 <% if current_user %>
 
     <h4>Give a rating:</h4>
 
     <%= form_for(@rating) do |f| %>
         <%= f.hidden_field :beer_id %>
-        score: <%= f.number_field :score %>
-        <%= f.submit %>
+        Score: <%= f.number_field :score %>
+        <%= f.submit class:'btn btn-primary' %>
     <% end %>
-
-    <%= link_to 'Edit', edit_beer_path(@beer) %>
+    <br>
+    <%= link_to 'Edit', edit_beer_path(@beer), class:'btn btn-primary' %>
 
 <% end %>
+</p>
+
+<p>
+    <%= link_to 'Destroy', @beer, class:'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } if current_user.admin==true %>
+</p>
 
