--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,14 +1,77 @@
 <p id="notice"><%= notice %></p>
 
-<h2>List of ratings</h2>
+<h2>Ratings</h2>
+<br>
 
-<p> Number of ratings: <%= Rating.count %> </p>
+<p>
+  <strong>Top 3 beers:</strong>
+</p>
 
-<ul>
-  <% @ratings.each do |rating| %>
-    <li> <%= rating %> <%= link_to rating.user.username, user_path(rating.user.id)%> </li>
+<%= render 'list', b: @top_beers %>
+
+<br>
+<p>
+  <strong>Top 3 breweries:</strong>
+</p>
+
+<%= render 'list', b: @top_breweries %>
+
+
+<br>
+<p>
+  <strong>Top 3 styles:</strong>
+</p>
+
+<%= render 'list', b: @top_styles %>
+
+<br>
+<p>
+  <strong>Top 3 raters:</strong>
+</p>
+
+<table class="table table-hover">
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Number of ratings</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @top_raters.each do |rater| %>
+      <tr>
+        <td><%= link_to rater.username, rater %></td>
+        <td><%= rater.ratings.count %></td>
+        <td></td>
+      </tr>
   <% end %>
-</ul>
+  </tbody>
+</table>
+
+
+<br>
+<p>
+  <strong>Recent ratings:</strong>
+</p>
+
+<table class="table table-hover">
+  <thead>
+  <tr>
+    <th>Rating</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @recent_ratings.each do |r| %>
+      <tr>
+        <td><%= r %></td>
+        <td></td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
+
+
 
 
 
