--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,14 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Beers</h1>
+<h1>Beers</h1>
+
+<% cache "beerlist-#{@order}", skip_digest: true do %>
 
 <table class="table table-hover">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Style</th>
-      <th>Brewery</th>
-      <th colspan="3"></th>
+      <th> <%= link_to 'Name', beers_path(order:"name") %> </th>
+      <th> <%= link_to 'Style', beers_path(order:"style") %> </th>
+      <th> <%= link_to 'Brewery', beers_path(order:"brewery") %> </th>
     </tr>
   </thead>
 
@@ -22,6 +23,8 @@
     <% end %>
   </tbody>
 </table>
+
+<% end %>
 
 <br>
 
