--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -4,9 +4,10 @@
 
 <h2>Active</h2>
 
+<% cache "brewerylist-#{@order}", skip_digest: true do %>
 <p> Number of active breweries: <%= @active_breweries.count %> </p>
 
-<%= render 'list', breweries: @active_breweries %>
+    <%= render 'list', breweries: @active_breweries %>
 
 <h2>Retired</h2>
 
@@ -14,6 +15,7 @@
 
 <%= render 'list', breweries: @retired_breweries %>
 
+<% end %>
 <br>
 
 <%= link_to 'New Brewery', new_brewery_path, class:'btn btn-primary' if current_user %>
