--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<% cache @brewery do %>
+
 <h2>
   <%= @brewery.name %>
   <%= link_to "change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %>
@@ -35,6 +37,8 @@
  Has <%= pluralize(@brewery.ratings.count, 'rating') %>, average <%= @brewery.average_rating %>
 <% end %>
 </p>
+
+<% end %>
 
 <p>
   <%= link_to 'Edit', edit_brewery_path(@brewery), class:'btn btn-primary' if current_user %>
