--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -6,21 +6,17 @@
 <li><%= link_to 'clubs', beer_clubs_path %></li>
 <li><%= link_to 'places', places_path %></li>
 <% if not current_user.nil? %>
-    <li>
-    <ul class="nav nav-pills">
-      <li role="presentation" class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
-          <%= current_user.username %> <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu" role="menu">
-          <li><%= link_to 'my page', current_user %></li>
-          <li><%= link_to 'rate a beer', new_rating_path %></li>
-          <li><%= link_to 'join a club', new_membership_path %></li>
-          <li><%= link_to 'signout', signout_path, method: :delete %></li>
-        </ul>
-      </li>
-
-    </ul>
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+        <%= current_user.username %>
+        <span class="caret"></span>
+      </a>
+      <ul class="dropdown-menu" role="menu">
+        <li><%= link_to 'my page', current_user %></li>
+        <li><%= link_to 'rate a beer', new_rating_path %></li>
+        <li><%= link_to 'join a club', new_membership_path %></li>
+        <li><%= link_to 'signout', signout_path, method: :delete %></li>
+      </ul>
     </li>
 
 <% else %>
